[package]
name = "ddc-hi"
version = "0.2.0"
authors = ["arcnmx"]
build = "build.rs"

description = "High level DDC/CI monitor control"
keywords = ["ddc", "mccs", "vcp", "vesa"]

documentation = "http://docs.rs/ddc-hi/"
repository = "https://github.com/arcnmx/ddc-hi-rs"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "arcnmx/ddc-hi-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]
ddc = "^0.2.0"
edid = "^0.3.0"
mccs = "^0.1.0"
mccs-caps = "^0.1.0"
mccs-db = "^0.1.1"
failure = "^0.1.1"
log = "^0.4.1"

[target.'cfg(target_os = "linux")'.dependencies]
ddc-i2c = { version = "^0.2.1", features = ["with-linux", "with-linux-enumerate"], optional = true }

[target.'cfg(windows)'.dependencies]
ddc-winapi = { version = "^0.2.0", optional = true }
nvapi = { version = "^0.1.2", default-features = false, features = ["i2c"], optional = true }
ddc-i2c = { version = "^0.2.1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
ddc-macos = { version = "^0.2.0", optional = true }

[features]
default = ["ddc-i2c", "ddc-winapi", "nvapi", "ddc-macos"]
